--- a/services.yml
+++ b/services.yml
@@ -16,6 +16,7 @@ spec:
         run: data-platform-api-bill-of-material-reads-rmq-kube
         app: BILL_OF_MATERIAL
     spec:
+      nodeName: worker
       hostname: data-platform-api-bill-of-material-reads-rmq-kube
       containers:
         - name: data-platform-api-bill-of-material-reads-rmq-kube
